--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - Sample Post</title>
+    <title>{{ post.title }}</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'myblog.views.post_list'%}">Start Bootstrap</a>
+                <a class="navbar-brand" href="{% url 'myblog.views.post_list'%}" style="font-family: Verdana">Blog</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -103,7 +103,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="copyright text-muted">Copyright &copy; Your Website {% now "Y" %}</p>
                 </div>
             </div>
         </div>
