--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load staticfiles %}
 <head>
 
     <meta charset="utf-8">
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="post_list.html">Some Thoughts</a>
+                <a class="navbar-brand" href="{% url 'myblog.views.post_list'%}" style="font-family: Verdana">Blog</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -54,13 +54,10 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="{% url 'myblog.views.about_me'%}">About</a>
                     </li>
                     <li>
-                        <a href="post_detail.html">Sample Post</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="{% url 'myblog.views.contact_me'%}">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -71,14 +68,14 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('static/img/home-bg.jpg')">
+    <header class="intro-header" style="background-image: url('{% static 'img/home-bg.jpg' %}')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>Clean Blog</h1>
+                        <h1>Ashim Lamichhane</h1>
                         <hr class="small">
-                        <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+                        <span class="subheading">Sometimes i just like to write</span>
                     </div>
                 </div>
             </div>
@@ -148,7 +145,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="copyright text-muted">Copyright &copy; Your Website {% now "Y" %}</p>
                 </div>
             </div>
         </div>
