Added django Taggit and changed configuration accordingly

--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -9,6 +9,7 @@
 {#                        <h1>Man must explore, and this is exploration at its greatest</h1>#}
                         <h1 class="subheading">{{ post.title }}</h1>
                         <span class="meta">Posted by <a href="about.html">{{ post.author }}</a> on {{ post.published_date }}</span>
+{#                        <span class="meta">{{ post.tags }}</span>#}
                         <hr>
                     </div>
                 </div>
