--- a/myblog/templates/blog/about.html
+++ b/myblog/templates/blog/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - About</title>
+    <title>Nepal Experiments | Hit And Trial | Bsc CSIT |</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
