--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -96,7 +96,16 @@
                             {{ post.text|linebreaks |slice:":200" }}...
                         </h3>
                     </a>
-                    <p class="post-meta">Posted by <a href="about.html">{{ post.author }}</a> on {{ post.published_date }}</p>
+                    <p class="post-meta">Posted by <a href="about.html">{{ post.author }}</a> on {{ post.published_date|date }}</p>
+                    <div class="post-meta" >
+                        <p>Categories:
+                        {% for tag in post.tags.all %}
+                            <a class="post-meta" href="/tag/{{ tag }}">{{ tag }}</a>
+                            {% if not forloop.last %},{% endif %}
+                        {% endfor %}
+                    </p>
+                    <div>
+
                 </div>
                     <hr>
                 {% endfor %}
