--- a/myblog/templates/blog/test.html
+++ b/myblog/templates/blog/test.html
@@ -1,62 +1,37 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Edx One with Theme</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-     body {
-       padding-top: 10px;
-     }
-   </style>
-</head>
-<body>
-  <div class="container">
-       <div class="jumbotron">
-         <p><h1>Submit Album</h1></p>
-       </div>
+{% extends 'blog/base.html' %}
+{% load staticfiles %}
+{% block content %}
 
+<header class="intro-header" style="background-image: url('{% static 'img/post-bg.jpg' %}')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="post-heading">
+{#                        <h1>Man must explore, and this is exploration at its greatest</h1>#}
+{#                        <h1 class="subheading">{{ post.title }}</h1>#}
+                        <h1>Posts tagged: "{{ tag }}"</h1>
 
-  <div class="panel-group" id="accordion-sample">
+                        <hr>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Post Content -->
+    <article>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
-   <div class="panel panel-default">
-     <div class="panel-heading">
-       <h4 class="panel-title">
-         <a data-toggle="collapse" data-parent="#accordion-sample" href="#accordion-sample-one">
-           Heading One
-         </a>
-       </h4>
-     </div>
-     <div id="accordion-sample-one" class="panel-collapse collapse in">
-       <div class="panel-body">
-         Sample content
-       </div>
-     </div>
-   </div>
-   <div class="panel panel-default">
-     <div class="panel-heading">
-       <h4 class="panel-title">
-         <a data-toggle="collapse" data-parent="#accordion-sample" href="#accordion-sample-two">
-           Heading Two
-         </a>
-       </h4>
-     </div>
-   <div id="accordion-sample-two" class="panel-collapse collapse">
-     <div class="panel-body">
-       Sample content
-     </div>
-   </div>
-</div>
-      <!--third-->
+                </div>
+                {% for post in posts %}
 
-</div>
-      </div>
+                    <p>{{ post.published_date|date }}: <a href="/post/{{ post.id }}">{{ post.title }}</a> </p>
 
+                {% endfor %}
+                {% endblock %}
+            </div>
 
-  <!-- jQuery -->
-    <script src="static/js/jquery.js"></script>
+        </div>
+    </article>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="static/js/bootstrap.min.js"></script>
-</body>
-</html>
