--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -8,8 +8,13 @@
                     <div class="post-heading">
 {#                        <h1>Man must explore, and this is exploration at its greatest</h1>#}
                         <h1 class="subheading">{{ post.title }}</h1>
-                        <span class="meta">Posted by <a href="about.html">{{ post.author }}</a> on {{ post.published_date }}</span>
-{#                        <span class="meta">{{ post.tags }}</span>#}
+                        <span class="meta">Posted by <a href="about.html">{{ post.author }}</a> on {{ post.published_date |date }}</span>
+                        <p class="post-meta">Categories:
+                        {% for tag in post.tags.all %}
+                            <a class="bg-info" href="/tag/{{ tag }}">#{{ tag }}</a>
+                            {% if not forloop.last %},{% endif %}
+                        {% endfor %}
+                        </p>
                         <hr>
                     </div>
                 </div>
