--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 {#                    <p>Post Description To Be here</p>#}
-                    {{ post.text|linebreaks }}
+                    {{ post.text|linebreaks |safe }}
                 </div>
             </div>
         </div>
